samples/_failures_safe/1761550199_d989de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a05f3ecb.c: In function ‘main’:
./samples/SAFE/__tmp_a05f3ecb.c:170:17: error: expected ‘;’ at end of input
  170 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_a05f3ecb.c:170:9: error: expected declaration or statement at end of input
  170 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_a05f3ecb.c:170:9: error: expected declaration or statement at end of input
